--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure >
-          <img src="./assets/images/soorajpn.png" alt="Richard hanrick" style="width:100px; height:100px; object-fit: cover; border-radius: 50%;">
+          <img src="./assets/images/soorajpn.png" alt="Richard hanrick" style="width: 100px;height: 100px;object-fit: cover; border-radius:50%;">
         </figure>
 
     
@@ -51,7 +51,6 @@
 
           <p class="title">CSE Undergrade at CET | Software Engineer</p>
         </div>
-        <br>
 
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
@@ -629,6 +628,40 @@
 
         <section class="projects">
 
+          
+          <div class="filter-select-box">
+
+            <button class="filter-select" data-select>
+
+              <div class="select-value" data-selecct-value>Select category</div>
+
+              <div class="select-icon">
+                <ion-icon name="chevron-down"></ion-icon>
+              </div>
+
+            </button>
+
+            <ul class="select-list">
+
+              <li class="select-item">
+                <button data-select-item>All</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web design</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Applications</button>
+              </li>
+
+              <li class="select-item">
+                <button data-select-item>Web development</button>
+              </li>
+
+            </ul>
+
+          </div>
 
           <ul class="project-list">
 
