--- a/index.html
+++ b/index.html
@@ -97,16 +97,6 @@
           <li class="contact-item">
 
             <div class="icon-box">
-              <ion-icon name="calendar-outline"></ion-icon>
-            </div>
-
-        
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
               <ion-icon name="location-outline"></ion-icon>
             </div>
 
@@ -124,6 +114,12 @@
 
         <ul class="social-list">
 
+          <li class="social-item">
+            <a href="https://github.com/SoorajTechie/" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
+            </a>
+          </li>
+          
           <li class="social-item">
             <a href="https://www.facebook.com/sooraj.np.50" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
