--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           <li class="social-item">
             <a href="https://github.com/SoorajTechie/" class="social-link">
-              <ion-icon class="bi bi-github"></ion-icon>
+              <ion-icon <i class="bi bi-github"></i>></ion-icon>
             </a>
           </li>
           
