--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
           <li class="social-item">
             <a href="https://github.com/SoorajTechie/" class="social-link">
-              <ion-icon name="logo-github"></i>></ion-icon>
+              <ion-icon ><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16"></i>></ion-icon>
             </a>
           </li>
           
