--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 60 staff (including ministerial) are also working in the institution in a serene atmosphere.
               </p>
               <br>
-              <span>AWARD - Topper of 2020-2023 Diploma batch in Computer Engineering</span>
+              <span><a href="https://drive.google.com/file/d/1MQ3hb9JjzRd-IXfxNhgNBUUW9iUW1kQv/view?usp=drive_link" >AWARD - Topper of 2020-2023 Diploma batch in Computer Engineering</a></span>
 
 
             </li>
