--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 60 staff (including ministerial) are also working in the institution in a serene atmosphere.
               </p>
               <br>
-              <a href="https://drive.google.com/file/d/1MQ3hb9JjzRd-IXfxNhgNBUUW9iUW1kQv/view?usp=drive_link"><span>AWARD - Topper of 2020-2023 Diploma batch in Computer Engineering</span></a>
+              <a href="https://drive.google.com/file/d/1MQ3hb9JjzRd-IXfxNhgNBUUW9iUW1kQv/view?usp=drive_link" class="link-warning"><span>AWARD - Topper of 2020-2023 Diploma batch in Computer Engineering</span></a>
 
 
             </li>
