--- a/index.html
+++ b/index.html
@@ -658,11 +658,11 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
+                    <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>
                   </div>
 
                   <img src="./assets/images/machine.png" alt="finance" loading="lazy">
