--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
+                    <a href="https://drive.google.com/file/d/1N1osnGLRb2PCcOzZzdx2IUeQiO9bKMvg/view?usp=drive_link" ><ion-icon name="eye-outline"></ion-icon></a>
                   </div>
 
                   <img src="./assets/images/tryst.png" alt="fundo" loading="lazy">
