--- a/index.html
+++ b/index.html
@@ -675,10 +675,11 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://drive.google.com/file/d/1N1osnGLRb2PCcOzZzdx2IUeQiO9bKMvg/view?usp=drive_link">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
+                   
                     <a href="https://drive.google.com/file/d/1N1osnGLRb2PCcOzZzdx2IUeQiO9bKMvg/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>
                     
                   </div>
