--- a/index.html
+++ b/index.html
@@ -675,12 +675,13 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://drive.google.com/file/d/1N1osnGLRb2PCcOzZzdx2IUeQiO9bKMvg/view?usp=drive_link">
+              <a href="#">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                    
-                    <a href="https://drive.google.com/file/d/1N1osnGLRb2PCcOzZzdx2IUeQiO9bKMvg/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>
+                       <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>
+                  </div>
                     
                   </div>
 
