--- a/index.html
+++ b/index.html
@@ -700,7 +700,7 @@
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"><a href="https://drive.google.com/file/d/1jK9VFtf1TFDiMoOIYSBKqmfXsALZHz9R/view?usp=sharing"></a></ion-icon>
+                  <a href="https://drive.google.com/file/d/1jK9VFtf1TFDiMoOIYSBKqmfXsALZHz9R/view?usp=sharing"><ion-icon name="eye-outline"></ion-icon></a>
                   </div>
 
                   <img src="./assets/images/web.jpg" alt="orizon" loading="lazy">
