--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                    <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>
+                    <!-- <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>-->
                   </div>
 
                   <img src="./assets/images/machine.png" alt="finance" loading="lazy">
@@ -680,7 +680,7 @@
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                    
-                       <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>
+                       <!--<a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>-->
                   </div>
                     
                   </div>
