--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                    <!-- <a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>-->
+                 <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
                   <img src="./assets/images/machine.png" alt="finance" loading="lazy">
@@ -680,10 +680,9 @@
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                    
-                       <!--<a href="https://drive.google.com/file/d/1vI50y8IHBgQN8Oh1z0kghGNKGHsA8qVH/view?usp=drive_link"><ion-icon name="eye-outline"></ion-icon></a>-->
+                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                     
-                  </div>
 
                   <img src="./assets/images/tryst.png" alt="fundo" loading="lazy">
                 </figure>
@@ -700,7 +699,7 @@
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
-                  <a href="https://drive.google.com/file/d/1jK9VFtf1TFDiMoOIYSBKqmfXsALZHz9R/view?usp=sharing"><ion-icon name="eye-outline"></ion-icon></a>
+                <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
                   <img src="./assets/images/web.jpg" alt="orizon" loading="lazy">
