--- a/index.html
+++ b/index.html
@@ -742,9 +742,7 @@
             <!--blog content here-->
             <li>
               <p class="timeline-text">              
-                "I've just begun my journey into learning Amazon Web Services (AWS). Exploring the wide range of tools and services it offers,
-                I'm eager to grasp the fundamentals of cloud computing. From setting up virtual servers to understanding storage solutions, every step forward feels like unlocking a new door to innovation. 
-                I'm excited to delve deeper, knowing that AWS holds the key to countless opportunities for growth and development in the digital realm."
+                "I've just begun my journey into learning Amazon Web Services (AWS). Exploring the wide range of tools and services it offers,I'm eager to grasp the fundamentals of cloud computing. From setting up virtual servers to understanding storage solutions, every step forward feels like unlocking a new door to innovation. I'm excited to delve deeper, knowing that AWS holds the key to countless opportunities for growth and development in the digital realm."
               </p>
          
             </li>
