new course certificate added ,code changed

--- a/index.html
+++ b/index.html
@@ -706,6 +706,24 @@
               </a>
             </li>
 
+              <li class="project-item  active" data-filter-item data-category="datascience">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/datascience.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Python for Data Science</h3>
+
+                <p class="project-category">Infosys springboard</p>
+
+              </a>
+            </li>
+
            
 
           </ul>
