--- a/index.html
+++ b/index.html
@@ -268,14 +268,14 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/git.svg" alt="camera icon" width="40">
+                <img src="./assets/images/icons8-git (1).svg" alt="camera icon" width="40">
               </div>
 
               <div class="service-content-box">
                 <h4 class="h4 service-item-title">Git </h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Expert in Git version control, skilled in branching, merging, and managing collaborative workflows.
                 </p>
               </div>
 
