--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/java (1).png
+                <img src="./assets/images/icons8-java.svg
                 " alt="design icon" width="40">
               </div>
 
