--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/itssooraj_/" class="social-link">
+            <a href="https://www.instagram.com/i_soorajj_/" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
