--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
         <section class="about-text">
           <p>
-            I am a fifth-semester BTech student in Computer Science and Engineering at the College of Engineering,
+            I am a Sixth-semester BTech student in Computer Science and Engineering at the College of Engineering,
              Thiruvananthapuram (Batch 2022-26), and also hold a diploma in computer engineering. 
              As a passionate engineering student, I possess excellent technical, analytical, leadership, and communication skills, evident in my robust academic track record. My approach is characterized by sincerity and dedication, underpinned by a strong sense of responsibility.
           </p>
